test/files/neg/t7166.check
Test_2.scala:2: error: silent = true does work!
  println(implicitly[Complex[Foo]])
                    ^
one error found
